Upgrade with latest jo's developments